--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,16 @@
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "chartist": "^1.3.0",
+    "dhtmlx-gantt": "^9.0.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.17.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
+    "react-google-charts": "^5.2.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.0",
