--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.7",
     "chartist": "^1.3.0",
     "dhtmlx-gantt": "^9.0.3",
     "jsonwebtoken": "^9.0.2",
@@ -18,6 +19,7 @@
     "react": "^18.3.1",
     "react-big-calendar": "^1.17.1",
     "react-bootstrap": "^2.10.7",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-google-charts": "^5.2.1",
     "react-router-dom": "^6.28.0",
