--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,10 @@
     "chartist": "^1.3.0",
     "dhtmlx-gantt": "^9.0.3",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
