--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,12 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.7",
     "chartist": "^1.3.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "dayjs": "^1.11.13",
     "dhtmlx-gantt": "^9.0.3",
+    "file-saver": "^2.0.5",
+    "gantt-task-react": "^0.3.9",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
@@ -29,7 +34,8 @@
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -54,5 +60,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.9"
   }
 }
